--- a/root/src/name.css
+++ b/root/src/name.css
@@ -1,7 +1,5 @@
-/* alice.{{name}} 样式模块 */
+/* {%= family %}.{%= name %} 样式模块 */
 
-@charset "utf-8";
-
-.ui-{%= name %} {
+.{%= family %}-{%= name %} {
 
 }
